@startuml
hide circle
hide empty members
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
title Class-diagram SnackTime


class User {
    +uint Identifier
    +string Name
    +string PasswordHash
    +string Email
    +Role Role
    +ICollection<Order> Orders
    +Basket Basket
    +uint? BasketIdentifier
}

class Role {
    +string Name
    +ICollection<Users> UsersWithRole
}

class Product {
    +uint Identifier
    +string Name
    +decimal Price
    +string ImagePath
    +ICollection<Addon> AvailableAddons
    +ICollection<Discount> Discounts
    +ProductCategory ProductCategory
}

class ProductCount {
    +uint Identifier
    +Product Product
    +uint Count
    +ICollection<Addon> AddonsUsed
    
    +GetTotalPrice()
}

class Basket {
    +uint Identifier
    +User Owner
    +ICollection<ProductCount> Products
    +enum OrderType
    
    +GetTotalPrice()
}

class Order {
    +uint Identifier
    +User Owner
    +ICollection<ProductCount> Products
    +enum Status
    +enum OrderType
    +DateTime OrderTime
    +uint TableNumber
    +uint OwnerIdentifier
    
    +GetTotalPrice()
}

class Discount {
    +uint Identifier
    +ICollection<Product> ApplicableProducts
    +decimal DiscountPercentage
    +DateTime StartTime
    +DateTime EndTime
    +string? DiscountCode
}

class Addon {
    +uint Identifier
    +string Name
    +decimal Price
    +ICollection<Product> ApplicableProducts
    +ICollection<Addon> UnavailableWith
    +ICollection<ProductCount> UsedInProductCounts
}

class ProductCategory {
    +uint Identifier
    +string Name
    +ICollection<Product> ProductsInCategory
}

User "1" -- "0:n" Order
Order "1" -- "0:n" ProductCount
ProductCount "0:n" -- "1" Product
Discount "0:1" -- "1" Product
User "1" -- "1" Basket
Addon "0:n" -- "0:n" Product
Addon "0:n" -- "0:n" ProductCount
Role "1" -- "0:n" User
Product "0:n" -- "1" ProductCategory
Basket "0:1" -- "0:n" ProductCount



@enduml